fixed mobile nav alignment

--- a/css/dark.css
+++ b/css/dark.css
@@ -3,8 +3,6 @@
   --red: #F44235;
   --orange: #FF9800;
   --green: #CCDB38;
-  --pink: #E81D62;
-
 
   --main-bg-color: var(--black);
   --main-font-color: #FFF;
